@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.450 2005/12/11 20:34:41 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.451 2005/12/13 19:31:13 rocket Exp $
+
+  13 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/stage1_target.py,
+  modules/stage2_target.py:
+  Move allowable cflags/cxxflags/chost/ldflags changing to stage2 from stage1
+  where it is allowed
 
   11 Dec 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
